100vh on mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,7 @@ html {
 }
 
 .App {
-  height: 100%;
-  max-height: 100vh;
+  height: 100vh;
   width: 100%;
   display: grid;
   grid-template-rows: 90% 10%;
